kubernetes/apps/networking/k8s-gateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-k8s-gateway
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-gateway
  ingress:
    - fromCIDR:
        - 192.168.0.0/24
        - 192.168.10.0/24
        - 192.168.20.0/24
        - 192.168.30.0/24
        - 192.168.90.0/24
      toPorts:
        - ports:
            - port: "1053"
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: adguard
            app.kubernetes.io/name: adguard-home
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
